# eagle-sdk-python

./: LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
docs/: api-reference-v2.md  api-reference.md
src/eagle_sdk/: __init__.py  _util.py  client.py  exceptions.py  http.py  models.py  wsl.py
src/eagle_sdk/api/: application.py  folder.py  item.py  library.py  tag.py  tag_group.py
tests/: conftest.py  test_application.py  test_client.py  test_errors.py  test_folder.py  test_item.py  test_library.py  test_models.py  test_token.py  test_transport.py  test_util.py  test_wsl.py
