[project]
name = "eagle-sdk-python"
version = "0.1.0"
description = "Python SDK for Eagle API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "nagomiita", email = "konnichiwatakeshi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eagle_sdk"]
